# ArchiCAD2eLCA_comps

./: .gitignore  Example.py  Example_wDataclass.py  LICENSE  OBD_AC_Eigenschaften.xml  OBDxml_variables.txt  README.md  element_import.py  ifc-extractor.py  pyproject.toml  requirements.txt  xml-builder.py
ArchiCAD_wall_psets/: ArchiCADProperties  ArchiCADQuantities  Pset_WallCommon  Qto_WallBaseQuantities
src/: __main__.py
src/archicad2elca_comps/: __init__.py  config.py  element_import.py  ifc_extractor.py  localization.py  xml_builder.py
src/archicad2elca_comps/resources/: elca_template.xml
xml_export/: eLCA_795ca01b-ca81-4a3b-befc-799d309ca802.xml  eLCA_aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee.xml  eLCA_ffffffff-gggg-hhhh-iiii-jjjjjjjjjjjj.xml
