[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "archicad2elca_comps"
version = "2024.6"
authors = [
  {name = "Bergmann, John Herbert", email = "john.bergmann@rwth-aachen.de" }
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 1 - Planning",
]
license = {file = "LICENSE"}
keywords = ["eLCA", "bauteileditor", "ArchiCAD", "Composites", "IFC4", "Building-Smart"]
maintainers = [
  {name = "Lehrstuhl und Forschungsgebiet Computergestütztes Entwerfen RWTH-Aachen", email = "lehre@dc.rwth-aachen.de" }
]
dependencies = [
  "ifcopenshell==0.7.0.240406"
]

[project.urls]
Homepage = "https://github.com/johnzoki/ArchiCAD2eLCA_comps"
Issues = "https://github.com/johnzoki/ArchiCAD2eLCA_comps/issues"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
archicad2elca_comps = "archicad2elca_comps:main"


# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"archicad2elca_comps" = ["resources/elca_template.xml"]}
